@@ -4,6 +4,7 @@
 * **Updated Theme Blvd framework to 2.8.2**
 * Fixed: JavaScript file for chart elements not getting included correctly (Filename had the incorrect case; the file was renamed from `Chart.min.js` to `chart.min.js`).
 * Fixed: Empty top header bar displaying on Super User and Entrepreneur theme bases, when it should be hidden.
+* Fixed: Mobile website header displaying with "Blank" page template; the website header should never display at all with this page template.
 
 ## 2.3.1 - 12/07/2018
 
